force-app/main/default/objects/Exl_POEType_ID_Mapping__mdt/Exl_POEType_ID_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>POEType Vs ID Mapping</label>
    <pluralLabel>POETypes Vs IDs Mapping</pluralLabel>
</CustomObject>