force-app/main/default/objects/Exl_POEType_ID_Mapping__mdt/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>Qld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>