force-app/main/default/objects/Exl_POEType_ID_Mapping__mdt/fields/POE_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Type__c</fullName>
    <label>POE Type</label>
    <referenceTo>Exl_POE_Type__mdt</referenceTo>
    <relationshipLabel>POETypes Vs IDs Mapping</relationshipLabel>
    <relationshipName>POETypes_Vs_IDs_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>