force-app/main/default/objects/Exl_POEType_ID_Mapping__mdt/fields/POEType_Id__c.field-meta.xml
<CustomField>
    <fullName>POEType_Id__c</fullName>
    <label>POEType_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>